--- a/index.html
+++ b/index.html
@@ -5,23 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Decodificador</title>
-    <link rel="stylesheet" href="./styles/tablete.css">
 </head>
 <body>
-            <!-- CABECALHO -->
+    <!-- CABECALHO -->
     <header class="cabecalho">
         <img src="./assets/Logo.png" class="cabecalho__img__logo" alt="Logo da Alura">
     </header>
 
     <main class="main__container">
         <div class="container__div">
-
             <!-- CAIXA DE TEXTO -->
             <div class="textare__div">
                 <textarea name="mensagem" id="textoOriginal" placeholder="Digite seu texto..."></textarea>
                 <div class="container__aviso">
                     <img src="./assets/Vector.png" alt="aviso">
-                    <p>Apenas letras minuscúlas e sem acento.</p>
+                    <p>Apenas letras minúsculas e sem acento.</p>
                 </div>
                 <!-- BOTOES -->
                 <div class="bnt__container">
@@ -38,14 +36,13 @@
                 <div class="resultado__container">
                     <p id="resultado"></p>
 
-                <!-- BOTOES COPIA/COLA -->
+                    <!-- BOTAO COPIA -->
                     <div class="bnt__container">
                         <button class="first__bnt" id="btnCopia"><strong>COPIAR</strong></button>
                     </div>
                 </div>
             </div>
         </div>
-
     </main>
 
     <footer>
@@ -53,8 +50,8 @@
             <img src="./assets/desenvolvido por gabriel Corrêa.png" alt="nome do criador do site Gabriel">
         </div>
     </footer>
-   
+
     <!-- LINK JAVASCRIPT -->
-     <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
