diminui o tamanho dos itens para se ajustarem ao site

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="info_principal">
                 <!-- IMG DO ANJO -->
                 <img src="./assets/anjo23.png" alt="imagem do anjo" class="img__anjo" id="imgAnjo">
 
@@ -47,7 +47,7 @@
 
     <footer>
         <div>
-            <img src="./assets/desenvolvido por gabriel Corrêa.png" alt="nome do criador do site Gabriel">
+            <img src="./assets/desenvolvido por gabriel Corrêa.png" alt="nome do criador do site Gabriel" class="nome_criador_img">
         </div>
     </footer>
 
